# rag-lite

./: .env  .gitignore  chromadb_viewer.py  main.py  pyproject.toml  test.py  test_path.py
app/: __init__.py  config.py
app/blueprints/: __init__.py  auth.py  chat.py  document.py  knowledgebae.py  knowledgebase.py  settings.py  utils.py
app/models/: __init__.py  base.py  chat_message.py  chat_session.py  document.py  knowledgebase.py  settings.py  user.py
app/services/: base_service.py  chat_service.py  chat_session_service.py  document_service.py  knowledgebase_service.py  parser_service.py  rag_service.py  settings_service.py  storage_service.py  user_service.py  vector_service.py
app/services/storage/: __init__.py  base.py  factory.py  local_storage.py  minio_storage.py
app/services/vectordb/: __init__.py  base.py  chroma.py  factory.py  milvus.py
app/templates/: base.html  chat.html  document_chunks.html  home.html  kb_detail.html  kb_list.html  login.html  register.html  settings.html
app/utils/: auth.py  db.py  document_loader.py  embedding_factory.py  llm_factory.py  logger.py  models_config.py  text_splitter.py
